# HomeWorksSection3

DiplomaRace_v3/: AirTransport.cpp  CMakeLists.txt  Camel.cpp  Centaur.cpp  Centaur.h  DialogFunctions.cpp  DialogFunctions.h  Eagle.cpp  Eagle.h  MyException.cpp  MyException.h  Nimbus2000.h  Race.cpp  Race.h  RaceAir.cpp  RaceAir.h  RaceGround.cpp  RaceGround.h  SuperBoots.cpp  SuperBoots.h  SuperCamel.cpp  SuperCarpet.cpp  Transport.cpp  Transport.h  main.cpp
DiplomaRace_v4/: CMakeLists.txt  main.cpp
DiplomaRace_v4/lib/: AirTransport.h  CMakeLists.txt  Camel.h  DialogFunctions.cpp  EnumList.h  GroundTransport.cpp  GroundTransport.h  Nimbus2000.cpp  Race.cpp  Race.h  RaceAir.cpp  RaceAir.h  RaceGround.cpp  RaceGround.h  SuperCamel.h  SuperCarpet.h  Transport.h
Diploma_Race/: Diploma_Race.sln
Diploma_Race/Diploma_Race/: Diploma_Race.cpp  Diploma_Race.vcxproj  Diploma_Race.vcxproj.filters
Lesson1/Task1/: Task1.sln
Lesson1/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson1/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
Lesson10Libs/Greeter/: Greeter.sln
Lesson10Libs/Leaver/: Leaver.sln
Lesson10Libs/LeaverClient/: LeaverClient.sln
Lesson10Libs/LeaverLibrary/: LeaverLibrary.sln
Lesson10Libs/Task3v2/: CMakeLists.txt  LeaverLibrary.cpp  LeaverLibrary.h  main.cpp
Lesson10Libs/Task5/: CMakeLists.txt  FIgureLibrary.h  IsoscalestTriangle.h  Quadrangle.cpp  Quadrangle.h  RightTriangle.cpp  Triangle.cpp  Triangle.h
Lesson2/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson2/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson3/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson3/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson4nasledovanie/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson4nasledovanie/Task2_mnogougolniki/: Task2_mnogougolniki.cpp  Task2_mnogougolniki.sln  Task2_mnogougolniki.vcxproj  Task2_mnogougolniki.vcxproj.filters
Lesson4nasledovanie/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
Lesson5multifile/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj  Task1.vcxproj.filters  calculator.cpp  calculator.h
Lesson6Preprocessors/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson6Preprocessors/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson7Errors/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson7Errors/Task2/: EquilateralTriangle.cpp  Figure.cpp  Figure.h  IsoscalestTriangle.cpp  IsoscalestTriangle.h  MyException.cpp  MyException.h  Parallelogram.cpp  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  RightTriangle.cpp  RightTriangle.h  Square.cpp  Task2.cpp  Task2.sln  Task2.vcxproj  Task2.vcxproj.filters  Triangle.cpp  Triangle.h
Lesson8operators/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson8operators/Task2/: Fraction.cpp  Fraction.h  Task2.cpp  Task2.sln  Task2.vcxproj
Lesson9cmake/Task1/: CMakeLists.txt  (+1 more)
Lesson9cmake/Task2/: CMakeLists.txt  Figure.cpp  Quadrangle.h  Rectangle.cpp  Rhombus.cpp  Rhombus.h  RightTriangle.h  Square.h  Task2.cpp  Triangle.h
(+94 files in other folders)
