cmake_minimum_required(VERSION 3.22.0)
set (CMAKE CXX_STANDARD 20)
set (CMAKE CXX_STANDARD_REQUIRED True)
project(Task2 VERSION 0.1)
set(SOURCE_LIB Figure.cpp Triangle.cpp EquilateralTriangle.cpp IsoscalestTriangle.cpp Parallelogram.cpp Quadrangle.cpp Rectangle.cpp Rhombus.cpp RightTriangle.cpp Square.cpp)
set(SOURCE_HD Figure.h Triangle.h EquilateralTriangle.h IsoscalestTriangle.h Parallelogram.h Quadrangle.h Rectangle.h Rhombus.h RightTriangle.h Square.h)
set(SOURCE_EXE Task2.cpp)
add_library(my_lib ${SOURCE_LIB} ${SOURCE_HD})
add_executable(Task2 ${SOURCE_EXE} ${SOURCE_LIB} )
